# OpenBIC

./: README.md  dir_010e0ce7c1a968c8061e7622b9c8549f.html  dir_010e0ce7c1a968c8061e7622b9c8549f_dep.map  dir_010e0ce7c1a968c8061e7622b9c8549f_dep.md5  dir_0ab472bc251ac48fc9657e5381445d16.html  dir_0ab472bc251ac48fc9657e5381445d16_dep.map  dir_0ab472bc251ac48fc9657e5381445d16_dep.md5  dir_1ca7deff23bb0c60dc4e44a39fd23902.html  dir_1ca7deff23bb0c60dc4e44a39fd23902_dep.map  dir_1ca7deff23bb0c60dc4e44a39fd23902_dep.md5  dir_361bf8ea0ca66728b4fcda0a2e4eae40.html  dir_361bf8ea0ca66728b4fcda0a2e4eae40_dep.map  dir_361bf8ea0ca66728b4fcda0a2e4eae40_dep.md5  dir_44409b082a4b3d2bfeb412e1b6bf23a8.html  dir_44409b082a4b3d2bfeb412e1b6bf23a8_dep.map  dir_44409b082a4b3d2bfeb412e1b6bf23a8_dep.md5  dir_45b0a82fb5e966561d3dd14f54e2d196.html  dir_45b0a82fb5e966561d3dd14f54e2d196_dep.map  dir_45b0a82fb5e966561d3dd14f54e2d196_dep.md5  dir_4c0ee9b72ec77f4e0378961fc427c66d.html  dir_4c0ee9b72ec77f4e0378961fc427c66d_dep.map  dir_4c0ee9b72ec77f4e0378961fc427c66d_dep.md5  dir_561c0d88955d482db446f6c8955411c9.html  dir_561c0d88955d482db446f6c8955411c9_dep.map  dir_561c0d88955d482db446f6c8955411c9_dep.md5  dir_61c79be81bd9d3ab26186db84b8d134e.html  dir_61c79be81bd9d3ab26186db84b8d134e_dep.map  dir_61c79be81bd9d3ab26186db84b8d134e_dep.md5  dir_65c0db4316691c4fdfc4d0dfead25160.html  dir_83dc627f5ea4209014b7700c198d702d.html  dir_83dc627f5ea4209014b7700c198d702d_dep.map  dir_83dc627f5ea4209014b7700c198d702d_dep.md5  dir_99997af0ef0333159f321501978d0000.html  dir_99997af0ef0333159f321501978d0000_dep.map  dir_99997af0ef0333159f321501978d0000_dep.md5  dir_a75c45664771606842415dd0e42c969a.html  dir_a75c45664771606842415dd0e42c969a_dep.map  dir_a75c45664771606842415dd0e42c969a_dep.md5  dir_ae33a0d20050b418b410b34ad4b63e59.html  dir_ae33a0d20050b418b410b34ad4b63e59_dep.map  (+118 more)
common/dev/: c2h_npcm.c  npcm4xx_adc.c  snoop_npcm.c
meta-facebook/yv35-npcm-test/: CMakeLists.txt  README.md  prj.conf
meta-facebook/yv35-npcm-test/boards/: npcm400f_evb.conf  npcm400f_evb.overlay
meta-facebook/yv35-npcm-test/src/ipmi/: plat_ipmi.c
meta-facebook/yv35-npcm-test/src/lib/: plat_spi.c  plat_sys.c
meta-facebook/yv35-npcm-test/src/platform/: plat_class.c  plat_class.h  plat_def.h  plat_gpio.c  plat_gpio.h  plat_hook.c  plat_hook.h  plat_i2c_target.c  plat_init.c  plat_ipmb.c  plat_ipmb.h  plat_isr.c  plat_mctp.c  plat_mctp.h  plat_pldm.c  plat_pldm.h  plat_pldm_fw_update.c  plat_power_seq.c  plat_power_seq.h  plat_sdr_table.c  plat_sensor_table.c  plat_sensor_table.h  plat_ssif.c  plat_ssif.h  plat_version.h
search/: all_10.js  all_12.js  all_13.js  all_4.js  all_7.js  all_d.js  files_e.js  functions_13.js
(+85 files in other folders)
